<resources>
    <!--<string name="app_name">JAU</string>-->
    <string name="app_name">GSFC University</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="alert_dialog_title">Please Select</string>
    <string name="positive_button_text">Select</string>
    <string name="negative_button_text">Cancel</string>
    <string name="my_text">This is an <u>underline</u>.</string>
    <string name="action_settings">Settings</string>
    <string name="footer_txt">Devloped &amp; Managed By:</string>
    <string name="permission_request">Permission Request</string>
    <string name="permissions_has_not_grant">Permissions has not been granted</string>
    <string name="title_punch_in">Punch In</string>
    <string name="title_press_to_punch_in">Press to punch in</string>
    <string name="title_punch_out">Punch Out</string>
    <string name="title_press_to_punch_out">Press to punch out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="l_name">Leave\nApplication</string>
    <string name="title_activity_tabactivity">tabactivity</string>
    <string name="att">My\nAttendance</string>
    <string name="view_detail">   View\nDetail  </string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="internal_storage">Internal storage</string>
    <string name="something_went_wrong">Something went wrong,try again !!!</string>
    <string name="GPSAlertDialogTitle">GPS Setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu?</string>

    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>

    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>

    <string name="country">Country : </string>
    <string name="city">City : </string>
    <string name="postalCode">Postal Code : </string>
    <string name="addressLine">Address Line : </string>

    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="header_login_txx">Sign In With Password</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="fpassword">Forgot Password</string>
    <string name="leave">Leave</string>
    <string name="miss_punch">Miss Punch</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="submit">Submit</string>

    <string name="title_app_update">Update</string>
    <string name="title_update_now">Update Now</string>
    <string name="title_new_version_available">There is a newer version of this application available</string>
    <string name="title_not_now">Not Now</string>
    <string name="default_notification_channel_id">my_channel_02</string>
    <string name="tap_back_again_to_exit">Tap back again to exit</string>

</resources>
