<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"

    android:fillViewport="true"
    android:windowSoftInputMode="adjustPan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"

        android:orientation="vertical"
        android:background="@drawable/sign_in_bg"
        tools:context=".Activity.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.infinity.infoway.gsfc.CommonCls.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/header_login_txx"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_large"
                android:typeface="sans" />

            <com.infinity.infoway.gsfc.CommonCls.CustomBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="User ID"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/login_border"
                android:padding="10dp">

                <EditText
                    android:id="@+id/edt_uname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/envelop"
                    android:hint="   User Id"
                    android:paddingLeft="5dp"
                    android:lines="1"
                    android:drawablePadding="5dp"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <com.infinity.infoway.gsfc.CommonCls.CustomBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:text="Password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/login_border"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:background="@null"
                    android:drawableLeft="@drawable/password"
                    android:hint="   Password"
                    android:maxLines="1"
                    android:lines="1"
                    android:drawablePadding="5dp"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:textSize="@dimen/text_size" />
                <CheckBox
                    android:id="@+id/chk_show_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_weight=".2"
                    android:padding="5dp"
                    android:layout_centerHorizontal="true"
                    android:button="@drawable/bg_showpassword"
                    />
                <!--     <ImageView
                         android:id="@+id/iv_show_psw"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight=".2"
                         android:src="@drawable/eye" />-->
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <com.infinity.infoway.gsfc.CommonCls.CustomBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="Company"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_border">

                    <Spinner
                        android:id="@+id/spin_company"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:paddingLeft="15dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:weightSum="2"
                android:orientation="horizontal"
                android:padding="10dp"
                >

                <com.infinity.infoway.gsfc.CommonCls.CustomBoldTextView
                    android:id="@+id/tv_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_fill_border_pink"
                    android:gravity="center"
                    android:paddingTop="10dp"

                    android:paddingBottom="10dp"
                    android:text="@string/sign_in_text"
                    android:textColor="@color/white" />

                <com.infinity.infoway.gsfc.CommonCls.CustomBoldTextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:background="@drawable/border_signup"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/sign_up_text"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.infinity.infoway.gsfc.CommonCls.CustomTextView
                    android:id="@+id/tv_f_psw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/fpassword"
                    android:textSize="@dimen/text_size"
                    android:typeface="sans" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>