<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/footer_agree"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/green">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center_vertical">

                <com.infinity.infoway.gsfc.CommonCls.CustomTextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Internship Attendance"
                    android:textColor="@color/black"

                    android:textSize="17sp" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <TextClock
        android:id="@+id/txt_add_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:format12Hour="dd MMM, yyyy hh:mm:ss a"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:timeZone="GMT+0530" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/ll_calaendar"
            android:visibility="visible"
            android:background="@drawable/boarderline_bg"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/llFromDate"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="2"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/datepickerfrom"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/calendar" />


                <com.infinity.infoway.gsfc.CommonCls.CustomEditText
                    android:id="@+id/tvfromDate_punchIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="2dp"
                    android:background="@drawable/boarderline_bg"
                    android:hint="Select Date"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:textSize="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lltodate"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/datepickerto"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/calendar" />

                <com.infinity.infoway.gsfc.CommonCls.CustomEditText
                    android:id="@+id/tvtodate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="2dp"
                    android:background="@drawable/boarderline_bg"
                    android:hint="Select Date"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:textSize="10dp" />

                <!--<TextView-->
                <!--android:id="@+id/tvtodate"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_gravity="center"-->
                <!--android:gravity="center"-->
                <!--android:text="todate"-->
                <!--android:textColor="@color/black"-->
                <!--android:textSize="18sp" />-->

            </LinearLayout>

            <com.infinity.infoway.gsfc.CommonCls.CustomButton
                android:id="@+id/btn_view_punch_inout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:background="@drawable/button_attendance"
                android:gravity="center"
                android:text="VIEW "
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_punch_in_put"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.infinity.infoway.gsfc.CommonCls.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   Punch In Time   :  "
                android:textColor="@color/black" />

            <com.infinity.infoway.gsfc.CommonCls.CustomTextView
                android:id="@+id/tv_punch_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.infinity.infoway.gsfc.CommonCls.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   Punch Out Time  : "
                android:textColor="@color/black" />


            <com.infinity.infoway.gsfc.CommonCls.CustomTextView
                android:id="@+id/tv_punch_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_punch_in_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_add_attendance_time"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_punch_in"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:visibility="gone"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/bg_circle_expense"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_punchin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/title_punch_in"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_punch_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/title_press_to_punch_in"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_punch_out"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:visibility="gone"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/bg_circle_order"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_punchout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/title_punch_out"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_punch_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/title_press_to_punch_out"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>


        </android.support.v7.widget.CardView>


        <com.infinity.infoway.gsfc.CommonCls.CustomBoldTextView
            android:layout_width="match_parent"
            android:id="@+id/tv_msg_internship"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="14dp"
            android:textColor="@color/red"
            android:layout_height="wrap_content"></com.infinity.infoway.gsfc.CommonCls.CustomBoldTextView>
        <ListView
            android:layout_width="match_parent"
            android:id="@+id/lv_main"
            android:visibility="gone"
            android:layout_height="wrap_content"></ListView>
    </LinearLayout>

</LinearLayout>
</LinearLayout>